--- a/index.html
+++ b/index.html
@@ -5,9 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subneter</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1, h3 {
+            color: #007acc;
+        }
+        input[type="text"], button {
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #007acc;
+            border-radius: 5px;
+            width: calc(100% - 22px); /* Adjusted for padding and border */
+            max-width: 400px; /* Max width for the input */
+        }
+        button {
+            background-color: #007acc;
+            color: white;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #005f99;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-top: 20px;
         }
         th, td {
             border: 1px solid #ddd;
@@ -15,7 +42,15 @@
             text-align: left;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #e0f7ff;
+        }
+        tbody tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+        @media (max-width: 600px) {
+            input[type="text"], button {
+                width: 100%; /* Full width on smaller screens */
+            }
         }
     </style>
 </head>
