--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
             align-items: center;
             justify-content: center;
         }
+        hr {
+            border: 0;
+            border-top: 1px solid #ccc;
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
@@ -75,6 +80,10 @@
     </form>
 
     <div class="gap"></div> <!-- Gap added here -->
+
+    <hr> <!-- Horizontal line added here -->
+
+    <div class="gap"></div> <!-- Additional gap -->
 
     <form id="reserveSubnetForm">
         <label for="reserveSubnetInput">Reserve a Subnet:</label>
