--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         input[type="text"] {
             padding: 8px;
-            width: 250px;
+            width: 300px;
             margin-right: 10px;
         }
 
@@ -32,6 +32,7 @@
 
         button#reloadButton {
             background-color: lightorange;
+            border: 1px solid lightorange;
         }
 
         button.delete-button {
@@ -41,7 +42,6 @@
             border-radius: 50%;
             width: 25px;
             height: 25px;
-            text-align: center;
             cursor: pointer;
         }
 
@@ -67,6 +67,7 @@
 
         hr {
             border-top: 2px solid lightgray;
+            margin: 20px 0;
         }
     </style>
 </head>
